# air-quality-prediction

./: .gitignore  README.md  eda.ipynb  example.env  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml  ingest.yml  predict.yml  train.yml
data/: central,-singapore-air-quality.csv  east,-singapore-air-quality.csv  north,-singapore-air-quality.csv  south,-singapore-air-quality.csv  west,-singapore-air-quality.csv
data/air-temperature/: Ang_Mo_Kio_Avenue_5-air-temperature-hourly-merged.csv  Banyan_Road-air-temperature-hourly-merged.csv  Clementi_Road-air-temperature-hourly-merged.csv  East_Coast_Parkway-air-temperature-hourly-merged.csv  Kim_Chuan_Road-air-temperature-hourly-merged.csv  Marina_Gardens_Drive-air-temperature-hourly-merged.csv  Nanyang_Avenue-air-temperature-hourly-merged.csv  Old_Choa_Chu_Kang_Road-air-temperature-hourly-merged.csv  Paya_Lebar-air-temperature-hourly-merged.csv  Pulau_Ubin-air-temperature-hourly-merged.csv  Scotts_Road-air-temperature-hourly-merged.csv  Semakau_Landfill-air-temperature-hourly-merged.csv  Sentosa-air-temperature-hourly-merged.csv  (+5 more)
docs/: index.html
notebooks/: 1_air_quality_feature_backfill.ipynb  2_air_quality_feature_pipeline.ipynb  3-data-processing.ipynb  4_training_pipeline.ipynb  5_predictions.ipynb
outputs/: latest_results.json
scripts/: update_docs.sh
src/: __init__.py  daily_ingestion.py  forecasts_ingestion.py  merge_winds.py  pm25_scraper.py  predict.py  train.py  wind_direction_processor.py  wind_direction_scraper.py  wind_speed_processor.py  wind_speed_scraper.py
(+58 files in other folders)
